--- a/css/app.css
+++ b/css/app.css
@@ -5,4 +5,139 @@
   --red-pigment: #ED1C24;
   --baby-powder: #FDFFFC;
   font-family: 'Cabin', sans-serif;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  background-color: var(--baby-powder);
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  padding: 1.25em 1.5em;
+  border-bottom: 0.1px solid var(--eggplant-purple);
+}
+
+.login-box {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5em 0.75em;
+  row-gap: 2em;
+}
+
+.social-media-auth {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1em;
+  list-style: none;
+  align-self: stretch;
+  padding: 0;
+}
+
+.social-login {
+  display: block;
+  border-radius: 100px;
+  padding: 1em 1.5em;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  color: inherit;
+}
+
+.social-login:hover, .social-login:focus {
+  border: 1.5px solid var(--space-cadet);
+}
+
+
+.twitter {
+  background-color: #1DA1F2;
+  color: #ffffff;
+}
+
+.reddit {
+  background-color: #ff4500;
+  color: #ffffff;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1em;
+}
+
+input {
+  width: 100%;
+  padding: 0.75em;
+  border: 1px solid #000000;
+  border-radius: 5px; 
+}
+
+#remember-me {
+  width: auto;
+}
+
+.forgot-password {
+  text-decoration: none;
+  color: inherit;
+  cursor: auto;
+}
+
+.forgot-password:focus, .forgot-password:hover {
+  text-decoration: underline;
+}
+
+.login-btn{
+  border: none;
+  border-radius: 100px;
+  padding: 0.75em 1em;
+  background-color: var(--tomato-image);
+  color: var(--baby-powder);
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.login-btn:hover, .login-btn:focus {
+  background-color: var(--red-pigment);
+}
+
+.sign-up {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1em;
+  text-align: center;
+}
+
+.sign-up h2{
+  font-size: 1.5rem;
+}
+
+.sign-up-btn {
+  display: block;
+  border-radius: 100px;
+  padding: 0.75em 1em;
+  background-color: var(--eggplant-purple);
+  color: var(--baby-powder);
+  text-decoration: none;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.sign-up-btn:hover, .sign-up-btn:focus {
+  background-color: var(--space-cadet);
+  color: #FFFFFF;
 }
