--- a/css/app.css
+++ b/css/app.css
@@ -99,6 +99,7 @@ input {
   text-decoration: none;
   color: inherit;
   cursor: auto;
+  width: max-content;
 }
 
 .forgot-password:hover, .forgot-password:focus {
