--- a/css/app.css
+++ b/css/app.css
@@ -78,10 +78,35 @@ body {
   color: #ffffff;
 }
 
+.divider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
+  column-gap: 1em;
+  margin: -1.75em 0em;
+}
+
+.divider::before {
+  content: "";
+  border-bottom: 1px solid var(--space-cadet);
+  width: 40%;
+}
+
+.divider::after {
+  content: "";
+  border-bottom: 1px solid var(--space-cadet);
+  width: 40%;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
   row-gap: 1em;
+  border-bottom: 1px solid var(--space-cadet);
+  padding-bottom: 1.5em;
 }
 
 input {
@@ -129,7 +154,8 @@ input {
 }
 
 .sign-up h2{
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  font-weight: 700;
 }
 
 .sign-up-btn {
