--- a/css/app.css
+++ b/css/app.css
@@ -81,7 +81,9 @@ body {
   color: #ffffff;
 }
 
-
+.google {
+  background-color: var(--baby-powder);
+}
 
 .divider {
   display: flex;
@@ -167,7 +169,7 @@ input {
   display: block;
   border-radius: 100px;
   padding: 0.75em 1em;
-  background-color: var(--eggplant-purple);
+  background-color: var(--space-cadet);
   color: var(--baby-powder);
   text-decoration: none;
   font-weight: 700;
@@ -175,6 +177,6 @@ input {
 }
 
 .sign-up-btn:hover, .sign-up-btn:focus {
-  background-color: var(--space-cadet);
-  color: #FFFFFF;
+  background-color: var(--baby-powder);
+  color: #000000;
 }
