Add media query that stops .login-box from growing past 479px wide when screen is larger than 490px

--- a/css/app.css
+++ b/css/app.css
@@ -185,3 +185,9 @@ input {
   background-color: var(--baby-powder);
   color: #000000;
 }
+
+@media screen and (min-width: 490px) {
+  .login-box {
+    max-width: 479px;
+  }
+} 
