--- a/css/app.css
+++ b/css/app.css
@@ -47,6 +47,9 @@ body {
   margin: 1em 0.5em;
   padding: 1.5em 0.75em;
   row-gap: 2em;
+  box-shadow: 0px 2px 5px 5px rgba(255, 255, 255, 0.45);
+  -webkit-box-shadow: 0px 2px 5px 5px rgba(255, 255, 255, 0.45);
+  -moz-box-shadow: 0px 2px 5px 5px rgba(255, 255, 255, 0.45);
 }
 
 .social-media-auth {
